--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,16 +17,14 @@ layout: default
 	<body>
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
-				<img width="175" height="175" style="border-radius:50%;" src="/img/img_sgy.jpg">
-				<h1>Hux</h1>
+				<img width="175" height="175" style="border-radius:50%;" src="/img/sgy_img.jpg">
+				<h1>Sgy</h1>
 			</header>
 			<div class="main">
 				<ul class="cbp_tmtimeline">
-					<!-- 
-					时间线范例
 					<li>
 						<div class="cbp_tmlabel">
-							<h2 id="boxoffice">无 (演说.io)</h2>
+							<h2 id="boxoffice">Yanshuo.io (演说.io)</h2>
 							<time>2016.06</time>
 							<img src="images/work-yanshuo.jpg">
 							<ul>
@@ -40,8 +38,7 @@ layout: default
 								</li>
 							</ul>
 						</div>
-					</li> 
-					-->
+					</li>
 				</ul>
 			</div>
 		</div>
