--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@ layout: default
 	<body>
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
-				<img width="175" height="175" style="border-radius:50%;" src="/img/sgy_img.jpg">
+				<img width="175" height="175" style="border-radius:50%;" src="/img/img_sgy.jpg">
 				<h1>Sgy</h1>
 			</header>
 			<div class="main">
